frontend/tests/errors/ER-012/i8_wrap_negative/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Integer overflow wraps using two'"'"'s complement arithmetic | Integer overflow wraps using two'"'"'s complement (i8 negative overflow)


&^main() -> #i32 {
    x:#i8 = (#i8)-128;
    y:#i8 = (#i8)(x - 1);
    y;
}
